--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+mongodb = "2.8.0"
 serde = { version = "1.0", features = ["derive"] }
+tokio = "1.36.0"
 utoipa = { version = "4", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
 
